rbd markdown practice

--- a/2. Web/4. react/task-app/src/components/Header.css
+++ b/2. Web/4. react/task-app/src/components/Header.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap');
+
 body {
     margin: 0;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 .header {
     background: #5c7cfa;
